# BetsyCPP

./: CMakeLists.txt  README.md  TODO.md
include/: Color.hpp  DrawManager.hpp
source/: Color.cpp  DrawManager.cpp  main.cpp
